--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <header>
     <h1>🌿 EMAGREÇA EM 7 DIAS SEM DIETAS LOUCAS</h1>
     <p>Descubra o método prático para desinchar, emagrecer e recuperar sua saúde em apenas 1 semana.</p>
-    <a href="https://pay.kiwify.com.br/seu-link-de-checkout" class="button">QUERO COMEÇAR AGORA</a>
+    <a href="hhttps://pay.kiwify.com.br/5BNtbrC" class="button">QUERO COMEÇAR AGORA</a>
   </header>
 
   <section class="section">
@@ -85,7 +85,7 @@
       <li>✔️ Retomar sua autoestima</li>
       <li>✔️ Comer bem sem passar fome</li>
     </ul>
-    <a href="https://pay.kiwify.com.br/seu-link-de-checkout" class="button">EU QUERO O SECAR7 AGORA</a>
+    <a href="https://pay.kiwify.com.br/5BNtbrC" class="button">EU QUERO O SECAR7 AGORA</a>
   </section>
 
   <section class="section">
@@ -114,7 +114,7 @@
     <h2>Garantia & Segurança</h2>
     <p>🛡️ Garantia de 7 dias: Se você não amar, devolvemos seu dinheiro.</p>
     <p>🔒 Compra 100% segura e entrega imediata no seu e-mail.</p>
-    <a href="https://pay.kiwify.com.br/seu-link-de-checkout" class="button">SIM, EU QUERO O SECAR7 AGORA</a>
+    <a href="https://pay.kiwify.com.br/5BNtbrC" class="button">SIM, EU QUERO O SECAR7 AGORA</a>
   </section>
 
   <footer>
