--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <header>
     <h1>🌿 EMAGREÇA EM 7 DIAS SEM DIETAS LOUCAS</h1>
     <p>Descubra o método prático para desinchar, emagrecer e recuperar sua saúde em apenas 1 semana.</p>
-    <a href="hhttps://pay.kiwify.com.br/5BNtbrC" class="button">QUERO COMEÇAR AGORA</a>
+    <a href="https://pay.kiwify.com.br/5BNtbrC" class="button">QUERO COMEÇAR AGORA</a>
   </header>
 
   <section class="section">
